<resources>
    <string name="app_name">Takso_Mobile</string>
    <string name="enter_login">Введите ваш логин</string>
    <string name="enter_password">Введите ваш пароль</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="auth">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="register_advice">Если у вас нет аккаунта, то вы можете зарегистрироваться</string>
    <string name="create_login">Придумайте Ваш логин</string>
    <string name="create_password">Придумайте Ваш пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="Client">Клиент</string>
    <string name="Driver">Водитель</string>
    <string name="commit">Принять</string>
    <string name="AddressFrom">Откуда</string>
    <string name="AddressTo">Куда</string>
    <string name="Comment">Комментарий</string>
    <string name="YourAddress">Ваш адрес</string>
    <string name="AddressToHint">Адрес места назначения</string>
    <string name="CallTakso">Вызвать Такси</string>
    <string name="CancelOrder">Отменить заказ</string>
    <string name="OrderPrice">Цена услуги</string>
    <string name="orderInfoTimeToClient">Водитель прибудет через</string>
    <string name="orderInfoTimeToDriver">Вы будете у клиента через</string>
    <string name="OrderStatus">Статус заказа</string>
    <string name="personExit">Выйти из аккаунта</string>
    <string name="FavouritePlaces">Любимые места</string>
    <string name="personHistory">История поездок</string>
    <string name="Home">Дом</string>
    <string name="Work">Работа</string>
    <string name="Save">Сохранить</string>
    <string name="PersonName">Имя</string>
    <string name="PersonLastName">Фамилия</string>
    <string name="PersonPhone">Номер телефона</string>
    <string name="PersonEmail">Email</string>
    <string name="PersonCodeName">Рабочее имя</string>
    <string name="PersonCar">Машина</string>
    <string name="unpinCar">Освободить автомобиль</string>
    <string name="key">e31a0a89-50dc-4d57-b2e5-76d43cb51133</string>
</resources>