<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/authCard"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundSecond"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/enter_login"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/auth_text_size" />

                    <EditText
                        android:id="@+id/login_login"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/login"
                        android:padding="@dimen/normal_padding"

                        android:textSize="@dimen/auth_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/enter_password"
                        android:textColor="@color/text_color"

                        android:textSize="@dimen/auth_text_size" />

                    <EditText
                        android:id="@+id/login_pass"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/normal_padding"

                        android:textSize="@dimen/auth_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/login_enterButton"
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:background="@drawable/auth_button"
                android:text="@string/enter"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/reg_advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_advice"
                android:textAlignment="center"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>