<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundSecond"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/normal_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/orderHistoryElementTime"
        tools:text="Заказ от 02.12.2020 19:30"
        android:textColor="@color/text_color"
        android:textSize="20sp"

        android:layout_marginBottom="@dimen/small_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/small_margin">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/AddressFrom"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/orderHistoryElementDestinationFrom"
                android:textSize="15sp"
                android:textStyle="bold"

                tools:text="Профсоюзная ул., 136, корп. 3"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@color/background"
            android:layout_marginHorizontal="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/AddressTo"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/orderHistoryElementDestinationTo"
                android:textSize="15sp"
                android:textStyle="bold"

                tools:text="Профсоюзная ул., 136, корп. 3"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@color/background"
        android:layout_marginVertical="@dimen/small_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/OrderPrice"
            android:textColor="@color/text_color"

            android:layout_marginEnd="@dimen/small_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/orderHistoryElementPrice"
            android:textSize="15sp"
            android:textStyle="bold"

            tools:text="1200 руб."
            android:textColor="@color/text_color"/>
    </LinearLayout>

</LinearLayout>